--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "server",
+  "name": "api-beyond-game",
   "version": "1.0.0",
-  "description": "api server beyond game",
-  "main": "app.js",
+  "description": "api beyond game",
+  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/app.js"
   },
   "author": "730",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.2"
   }
 }
